fix: correct blog post layout on mobiles

--- a/app/styles/notion.css
+++ b/app/styles/notion.css
@@ -34,6 +34,8 @@
 .notion-list,
 .notion-text {
   @apply font-gill-sans;
+
+  width: 100%;
 }
 
 .notion-title {
